--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@commitlint/config-conventional": "^17.3.0",
     "@next/font": "13.0.7",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
